--- a/career.html
+++ b/career.html
@@ -63,6 +63,7 @@
               <li> <a class="dropdown-item" href="ourteam.html"> Our Team</a></li>
             </ul>
           </li>
+          <li class="nav-item "><a class="nav-link" href="Gallery.html">Gallery</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#">Our Business Units</a>
             <ul class="dropdown-menu">
