--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <li> <a class="dropdown-item" href="ourteam.html"> Our Team</a></li>
             </ul>
           </li>
+          <li class="nav-item "><a class="nav-link" href="Gallery.html">Gallery</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#">Our Business Units</a>
             <ul class="dropdown-menu">
@@ -272,7 +273,7 @@
           is the General Sales Agent, Nigeria for DELTA AIR LINES INC., It was the first and only American Airline
           (until November 2011) operating direct flights between Nigeria and the USA. Delta has daily flights between
           Atlanta and Lagos.</p>
-        <p>Sky Logistics Cargo Limited handles the cargo for South African Airways and RwandAir.</p>
+
         <p><a href="#" class="btn btn-primary">Learn More</a></p>
       </div>
     </div>
@@ -287,7 +288,8 @@
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
         <h2 class="heading mb-4">TOTAL AIR LOGISTICS LIMITED</h2>
         <p>Total Air Logistics Limited was in incorporated in February 2011 specifically to represent China Southern
-          Airlines in Nigeria as the General Sales Agent. It currently as offline GSA for China Southern Airlines.</p>
+          Airlines in Nigeria as the General Sales Agent. 
+          It is the currently the General Sales Agent to Kenya Airways</p>
         <p><a href="#" class="btn btn-primary">Read More</a></p>
       </div>
     </div>
@@ -307,7 +309,7 @@
           Through their expertise and network, they facilitate the movement of goods across various regions and ensure
           timely and secure deliveries. The company's commitment to customer satisfaction and industry best practices
           underscores their role as a trusted partner in the logistics and cargo sector.</p>
-        <p>Sky Logistics Cargo Limited handles the cargo for South African Airways and RwandAir.</p>
+        <p>Sky Logistics Cargo Limited handles the cargo for South African Airways, Air Cote Dívoire and RwandAir.</p>
         <p><a href="#" class="btn btn-primary">Learn More</a></p>
       </div>
     </div>
@@ -337,12 +339,13 @@
     <div class="probootstrap-text order-1">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
         <h2 class="heading mb-4">SKY ALLIANCE AND INTEGRATED LOGISTICS LTD</h2>
-        <p>The company aims to streamline the movement of goods and products, ensuring timely and reliable deliveries
+        <p>The Company was incorporated in 2020 to act solely as the General Sales Agent for RwanAir</p>
+        <!-- <p>The company aims to streamline the movement of goods and products, ensuring timely and reliable deliveries
           for businesses and individuals. By leveraging advanced technology and industry expertise, Sky Alliance and
           Integrated Logistics Ltd strive to optimize supply chain operations, reduce costs, and enhance overall
           efficiency. Our commitment to innovative solutions and customer satisfaction positions us as a trusted partner
           in the logistics industry, contributing to the success of our clients' businesses.</p>
-        <p><a href="#" class="btn btn-primary">Learn More</a></p>
+        <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
       </div>
     </div>
   </section>
@@ -356,7 +359,7 @@
     <div class="probootstrap-text">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
         <h2 class="heading mb-4">TRANSCAP TRAVEL BUREAUX LIMITED</h2>
-        <p>The group acquired Transcap Travel Bureaux Limited (TTBL) in 2007. The company remains one of the leading
+        <p>The group acquired Transcap Travel Bureaux Limited (TTBL) in 2006. The company remains one of the leading
           travel management companies in Nigeria with a long-standing track record of successes since its days as a
           travel division within the French Multinational CFAO for almost six decades.</p>
         <p>
