--- a/ourteam.html
+++ b/ourteam.html
@@ -63,6 +63,7 @@
               <li> <a class="dropdown-item" href="ourteam.html"> Our Team</a></li>
             </ul>
           </li>
+          <li class="nav-item "><a class="nav-link" href="Gallery.html">Gallery</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#">Our Business Units</a>
             <ul class="dropdown-menu">
@@ -204,7 +205,7 @@
 
   <section class="probootstrap-section-half d-md-flex" id="section-about">
     <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/images/ceo.jpg); width: 30%;"></div>
+      style="background-image: url(assets/images/ceo002.jpg); width: 30%;"></div>
     <div class="probootstrap-text" style="width: 70%;">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
         <h2 class="heading mb-4">Olufemi Adefope</h2>
