gallery case change

--- a/gallery.html
+++ b/gallery.html
@@ -216,8 +216,8 @@
               <!-- <h3 class="box-title m-b-0">Lightbox gallery</h3> -->
               <!-- <code>&lt;a href="..." title="title will be apear here"&gt;&lt;img src="..."/&gt;&lt;/a&gt;</code>  m-t-30 --> 
               <div class="zoom-gallery">
-                  <a href="gallery/thanksgiving001.jpg" title="2024 GHI thanksgiving">
-                      <img src="gallery/thanksgiving001.jpg" width="32.5%" />
+                  <a href="Gallery/thanksgiving001.jpg" title="2024 GHI thanksgiving">
+                      <img src="Gallery/thanksgiving001.jpg" width="32.5%" />
                   </a>
                   <!-- <a href="plugins/images/big/img6.jpg" title="This image fits only horizontally.">
                       <img src="plugins/images/big/img6.jpg" width="32.5%" />
