--- a/gallery.html
+++ b/gallery.html
@@ -219,10 +219,11 @@
                   <a href="Gallery/thanksgiving001.jpg" title="2024 GHI thanksgiving">
                       <img src="Gallery/thanksgiving001.jpg" width="32.5%" />
                   </a>
-                  <!-- <a href="plugins/images/big/img6.jpg" title="This image fits only horizontally.">
-                      <img src="plugins/images/big/img6.jpg" width="32.5%" />
+                 <a href="Gallery/Image002.jpg" title="West Africa's Best Airline Representation
+                 and Management Company of the Year - Award nomination from IBMN">
+                      <img src="Gallery/Image002.jpg" width="32.5%" />
                   </a>
-                  <a href="plugins/images/big/img4.jpg">
+                  <!--  <a href="plugins/images/big/img4.jpg">
                       <img src="plugins/images/big/img4.jpg" width="32.5%" />
                   </a> -->
               </div> 
