--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@
 
   <section class="probootstrap-section-half d-md-flex">
     <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
+      style="background-image: url(assets/GHIAssetsImages/taag_angola.jpeg)"></div>
     <div class="probootstrap-text">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
         <h2 class="heading mb-4">APG GLOBAL ASSOCIATES NETWORK LTD</h2>
-        Our organisation operates within the global travel and aviation industry. As a network of associates, we
+        APG Global Associate Network Ltd was incorporated in 2010. Our organisation operates within the global travel and aviation industry. As a network of associates, we
         facilitate partnerships and collaborations between airlines, travel agencies, and other stakeholders. Our focus
         is on enhancing the distribution and accessibility of airline services to travelers and clients worldwide.
         Through strategic alliances and innovative solutions, APG Global Associates Network Ltd aims to optimize sales,
